fix z-index

--- a/stylus/components/message.styl
+++ b/stylus/components/message.styl
@@ -7,7 +7,7 @@
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(253, 253, 253, .925)), to(rgba(253, 253, 253, .8)))
   box-shadow: 0 0 1px rgba(0, 0, 0, .2)
   text-align: center
-  z-index: 1000
+  z-index: $z-index-message
 
   ul
     padding-left: 0
